--- a/public/style/css/front.css
+++ b/public/style/css/front.css
@@ -20,4 +20,60 @@ button {
   width: 80%;
   margin: auto; }
 
+body {
+  background-image: url("../../images/school.png");
+  background-repeat: repeat; }
+
+.login {
+  width: 40%;
+  height: auto;
+  min-height: 200px;
+  margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.6); }
+  .login .container {
+    position: relative;
+    min-height: 300px; }
+    .login .container .login-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      margin: auto; }
+      .login .container .login-content img {
+        margin: 20px 0px; }
+      .login .container .login-content form {
+        text-align: center;
+        width: 100%;
+        margin: 30px auto; }
+        .login .container .login-content form input {
+          display: block;
+          width: 80%;
+          padding: 10px;
+          border-radius: 3px;
+          -webkit-appearance: none;
+          border: 1px solid rgba(0, 0, 0, 0.1);
+          margin: 10px auto; }
+        .login .container .login-content form #submit {
+          width: 40%;
+          font-size: 14px;
+          text-transform: uppercase;
+          border: 1px solid rgba(0, 0, 0, 0.1);
+          background-color: transparent;
+          margin-top: 30px;
+          color: rgba(0, 0, 0, 0.5);
+          transition: all 0.3s ease;
+          cursor: pointer; }
+        .login .container .login-content form #submit:hover {
+          letter-spacing: 2px;
+          background-color: mediumspringgreen;
+          color: white;
+          border: none; }
+
 /*# sourceMappingURL=front.css.map */
