--- a/public/style/css/front.css
+++ b/public/style/css/front.css
@@ -26,7 +26,7 @@ body {
 
 .login {
   width: 40%;
-  height: auto;
+  height: 340px;
   min-height: 200px;
   margin: auto;
   position: relative;
@@ -38,7 +38,9 @@ body {
   background-color: rgba(255, 255, 255, 0.6); }
   .login .container {
     position: relative;
-    min-height: 300px; }
+    min-height: 300px;
+    top: 50%;
+    transform: translateY(-50%); }
     .login .container .login-content {
       position: absolute;
       top: 50%;
