--- a/public/style/scss/front.scss
+++ b/public/style/scss/front.scss
@@ -5,7 +5,7 @@ body{
 }
 .login{
   width: 40%;
-  height: auto;
+  height: 340px;
   min-height: 200px;
   margin: auto;
   position: relative;
@@ -18,6 +18,8 @@ body{
   .container{
     position: relative;
     min-height: 300px;
+    top: 50%;
+    transform: translateY(-50%);
     .login-content{
       position: absolute;
       top: 50%;
