Modified login page

--- a/public/style/css/front.css
+++ b/public/style/css/front.css
@@ -24,37 +24,40 @@ body {
   background-image: url("../../images/school.png");
   background-repeat: repeat; }
 
-.login {
+.page-content {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: hidden; }
+
+.login, .register {
+  display: block; }
+
+.register {
   width: 40%;
   height: 340px;
   min-height: 200px;
   margin: auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 3px;
-  background-color: rgba(255, 255, 255, 0.6); }
-  .login .container {
+  position: relative; }
+  .register .container {
     position: relative;
     min-height: 300px;
     top: 50%;
     transform: translateY(-50%); }
-    .login .container .login-content {
+    .register .container .login-content {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       width: 100%;
       margin: auto; }
-      .login .container .login-content img {
+      .register .container .login-content img {
         margin: 20px 0px; }
-      .login .container .login-content form {
+      .register .container .login-content form {
         text-align: center;
         width: 100%;
         margin: 30px auto; }
-        .login .container .login-content form input {
+        .register .container .login-content form input {
           display: block;
           width: 80%;
           padding: 10px;
@@ -62,7 +65,7 @@ body {
           -webkit-appearance: none;
           border: 1px solid rgba(0, 0, 0, 0.1);
           margin: 10px auto; }
-        .login .container .login-content form #submit {
+        .register .container .login-content form #submit {
           width: 40%;
           font-size: 14px;
           text-transform: uppercase;
@@ -72,10 +75,52 @@ body {
           color: rgba(0, 0, 0, 0.5);
           transition: all 0.3s ease;
           cursor: pointer; }
-        .login .container .login-content form #submit:hover {
+        .register .container .login-content form #submit:hover {
           letter-spacing: 2px;
           background-color: mediumspringgreen;
           color: white;
           border: none; }
+
+.login {
+  padding: 20px 0px; }
+  .login h3 {
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 2px; }
+  .login form {
+    text-align: center;
+    width: 100%;
+    margin: 15px auto; }
+    .login form input {
+      display: block;
+      width: 80%;
+      padding: 10px;
+      border-radius: 3px;
+      -webkit-appearance: none;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      margin: 10px auto; }
+    .login form #submitLogin {
+      width: 40%;
+      font-size: 14px;
+      text-transform: uppercase;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      background-color: transparent;
+      margin-top: 20px;
+      color: rgba(0, 0, 0, 0.5);
+      transition: all 0.3s ease;
+      cursor: pointer; }
+    .login form #submitLogin:hover {
+      letter-spacing: 2px;
+      background-color: mediumspringgreen;
+      color: white;
+      border: none; }
+
+.box {
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 40%;
+  margin: 10px auto; }
 
 /*# sourceMappingURL=front.css.map */
