--- a/public/style/css/organiser.css
+++ b/public/style/css/organiser.css
@@ -87,4 +87,48 @@ body {
           background-color: mediumspringgreen;
           color: white; }
 
+.lightboxes {
+  display: none; }
+
+#call-lightbox {
+  min-width: 400px; }
+  #call-lightbox h1 {
+    font-weight: 300;
+    text-align: center; }
+  #call-lightbox form {
+    text-align: center;
+    width: 100%;
+    margin: 15px auto; }
+    #call-lightbox form .checkbox {
+      display: inline-block;
+      margin: 10px 10px 30px 0px;
+      font-family: Avenir, sans-serif; }
+      #call-lightbox form .checkbox input {
+        display: block;
+        margin: auto;
+        width: 30px;
+        height: 30px;
+        border-radius: 360px; }
+    #call-lightbox form #text-area {
+      display: block;
+      width: 100%;
+      height: 100px;
+      margin: auto; }
+    #call-lightbox form #submit {
+      width: 40%;
+      font-size: 14px;
+      text-transform: uppercase;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      background-color: transparent;
+      margin-top: 20px;
+      color: rgba(0, 0, 0, 0.5);
+      transition: all 0.3s ease;
+      cursor: pointer;
+      padding: 10px 0px 10px 0px; }
+    #call-lightbox form #submit:hover {
+      letter-spacing: 2px;
+      background-color: mediumspringgreen;
+      color: white;
+      border: none; }
+
 /*# sourceMappingURL=organiser.css.map */
