--- a/public/style/scss/organiser.scss
+++ b/public/style/scss/organiser.scss
@@ -107,11 +107,12 @@ body{
       margin: 10px 10px 30px 0px;
       font-family: Avenir, sans-serif;
     }
-    #text-area{
+    #message{
       display: block;
       width: 100%;
       height: 100px;
       margin: auto;
+      padding: 10px;
     }
     #submit{
       width: 40%;
