--- a/public/style/css/organiser.css
+++ b/public/style/css/organiser.css
@@ -27,8 +27,7 @@ body {
 #logo {
   width: 100%;
   height: 100px;
-  text-align: center;
-  padding: 30px 0px; }
+  text-align: center; }
   #logo img {
     height: 80%;
     position: relative;
@@ -40,7 +39,7 @@ body {
   border-radius: 4px;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
   width: 60%;
-  margin: auto; }
+  margin: 30px auto 60px auto; }
   #users .panel-header h2 {
     text-align: center;
     font-weight: 500;
@@ -82,7 +81,10 @@ body {
           background-color: transparent;
           border: none;
           cursor: pointer;
-          transition: all 0.3s ease; }
+          transition: all 0.3s ease;
+          width: 100%; }
+          #users .panel-content .user-item .user-right button img {
+            margin-top: 0px; }
         #users .panel-content .user-item .user-right button:hover {
           background-color: mediumspringgreen;
           color: white; }
