--- a/public/style/scss/organiser.scss
+++ b/public/style/scss/organiser.scss
@@ -8,7 +8,6 @@ body{
   width: 100%;
   height: 100px;
   text-align: center;
-  padding: 30px 0px;
   img{
     height: 80%;
     position: relative;
@@ -22,7 +21,7 @@ body{
   border-radius: 4px;
   box-shadow: 0px 0px 3px rgba(0,0,0,0.2);
   width: 60%;
-  margin: auto;
+  margin: 30px auto 60px auto;
   .panel-header{
     h2{
       text-align: center;
@@ -72,6 +71,10 @@ body{
           border: none;
           cursor: pointer;
           transition: all 0.3s ease;
+          width: 100%;
+          img{
+            margin-top: 0px;
+          }
         }
         button:hover{
           background-color: mediumspringgreen;
