--- a/public/style/scss/front.scss
+++ b/public/style/scss/front.scss
@@ -111,7 +111,8 @@ body{
 }
 
 .qr{
-  height: 500px;
+  height: 665px;
+  width: 400px !important;
   .login-content{
     position: absolute;
     top: 50%;
