--- a/public/style/scss/organiser.scss
+++ b/public/style/scss/organiser.scss
@@ -23,11 +23,19 @@ body{
   width: 60%;
   margin: 30px auto 60px auto;
   .panel-header{
+    position: relative;
     h2{
       text-align: center;
       font-weight: 500;
       font-size: 30px;
       padding: 20px 0px;
+    }
+    img{
+      position: absolute;
+      top: 50%;
+      left: 97%;
+      transform: translate(-100%, -50%);
+      width: 30px;
     }
   }
   .panel-content{
