--- a/public/style/scss/organiser.scss
+++ b/public/style/scss/organiser.scss
@@ -30,7 +30,7 @@ body{
       font-size: 30px;
       padding: 20px 0px;
     }
-    img{
+    #profile{
       position: absolute;
       top: 50%;
       left: 97%;
